navbar main page links covered by hero-call section bugfixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,21 +45,18 @@ nav {
 }
 
 .hero-call {
-    position: absolute;
-    top: 0;
-    left: 20%;
-    padding-top: 100px;
-    z-index: 5;
+  position: absolute;
+  top: 0;
+  left: 20%;
+  margin-top: 100px;
+  z-index: 5;
 }
-
 
 /* Action now section  */
 
 .action-now {
-    height: 100vh;
+  height: 100vh;
 }
-
-
 
 /* --------------------------------------------------- About Paddy */
 
@@ -96,41 +93,40 @@ nav {
 }
 
 /*---------------------send message page*/
-h3,h4{
+h3,
+h4 {
   font-family: 'Marck Script', cursive;
 }
 /*-------------------------------- message section*/
 
-h3{
-  font-weight:600;
+h3 {
+  font-weight: 600;
   font-size: 4rem;
 }
 
-h4{
+h4 {
   color: #008000;
   font-weight: 600;
 }
 
-p{
+p {
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
-  
 }
 /*#message{
  }*/
- 
 
 /*-------------------------------- cards section*/
-span{
-  color:#008000;
+span {
+  color: #008000;
   font-family: 'Marck Script', cursive;
-  font-weight:600;
+  font-weight: 600;
   font-size: 1.5rem;
 }
 
-.funny-cards{
-  height:60%;
-  width:75%; 
+.funny-cards {
+  height: 60%;
+  width: 75%;
 }
 
 /*
@@ -140,7 +136,6 @@ span{
 /*-------------------------------- form section
 #fill-form{
 }*/
-
 
 /* --------------------------------------------------- Footer */
 footer .copyright {
